@@ -3,13 +3,9 @@ if defined?(Sequel)
     module AttrEncrypted
       module Adapters
         module Sequel
-          protected
-            # Calls attr_encrypted with the options <tt>:encode</tt> and <tt>:marshal</tt> set to true
-            # unless they've already been specified
-            def attr_encrypted(*attrs)
-              options = { :encode => true, :marshal => true }.merge(attrs.last.is_a?(Hash) ? attrs.pop : {})
-              super *(attrs << options)
-            end
+          def self.extended(base)
+            base.attr_encrypted_options.merge!(:encode => true, :marshal => true)
+          end
         end
       end
     end
